Extra features in dict builder

--- a/w2v-vis.ipynb
+++ b/w2v-vis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,20 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "embeddings = np.load(\"w2v-736000.npy\")\n",
+    "embeddings = np.load(\"w2v_rev-59000.npy\")\n",
     "with open(\"sst.dict\", \"rb\") as fd:\n",
     "    dict_data = pickle.load(fd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -58,72 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "test_word = \"him\""
+    "def get_similar(word, top=10):\n",
+    "    test_id = dict_data[word]\n",
+    "    sim = np.dot(embeddings, embeddings[test_id])\n",
+    "    order = np.argsort(sim)\n",
+    "    top_idx = reversed(order[-top:])\n",
+    "    return [rev_dict[idx] for idx in top_idx]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ID for him = 1158\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_id = dict_data[test_word]\n",
-    "print(\"ID for %s = %d\" % (test_word, test_id))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "v = embeddings[test_id]\n",
-    "sim = np.dot(embeddings, v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "order = np.argsort(sim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "top_10 = list(reversed(order[-10:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -131,21 +82,30 @@
     {
      "data": {
       "text/plain": [
-       "[1158, 18, 0, 25, 32, 13, 154, 8, 5, 1613]"
+       "['france',\n",
+       " 'rung',\n",
+       " 'borchardt',\n",
+       " 'self-congratulatory',\n",
+       " 'ricci',\n",
+       " 'disorienting',\n",
+       " 'taunt',\n",
+       " 'styled',\n",
+       " 'prosthetic',\n",
+       " 'serials']"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_10"
+    "get_similar('france')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -153,16 +113,171 @@
     {
      "data": {
       "text/plain": [
-       "['him', 'a', 'the', ',', '.', 'and', 'really', \"'s\", 'be', 'before']"
+       "['king',\n",
+       " 'uhhh',\n",
+       " 'bielinsky',\n",
+       " 'scherfig',\n",
+       " 'seventeen',\n",
+       " 'pounds',\n",
+       " 'nuked',\n",
+       " 'catch',\n",
+       " 'conniving',\n",
+       " 'claire']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[rev_dict[idx] for idx in top_10]"
+    "get_similar('king')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['trial',\n",
+       " 'future',\n",
+       " 'great',\n",
+       " 'dramatic',\n",
+       " 'startling',\n",
+       " 'idea',\n",
+       " 'precious',\n",
+       " 'real',\n",
+       " 'kind',\n",
+       " 'surprise']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('trial')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['she',\n",
+       " 'he',\n",
+       " 'here',\n",
+       " 'schaeffer',\n",
+       " 'exhaustion',\n",
+       " 'eighties',\n",
+       " 'teenage',\n",
+       " 'survivors',\n",
+       " 'controlled',\n",
+       " 'noon']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('she')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['god',\n",
+       " 'double-cross',\n",
+       " 'people',\n",
+       " 'nine',\n",
+       " 'paris',\n",
+       " 'mcklusky',\n",
+       " 'shadow',\n",
+       " 'sacre',\n",
+       " 'right-thinking',\n",
+       " 'leveling']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('god')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['love',\n",
+       " '``',\n",
+       " 'confusions',\n",
+       " 'super-powers',\n",
+       " 'grand-scale',\n",
+       " 'summary',\n",
+       " 'cumulative',\n",
+       " 'full-blown',\n",
+       " 'about',\n",
+       " 'bad']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('love')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['it', 'movie', ',', 'he', 'katzenberg', 'you', 'and', 'let', 'the', 'banzai']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('it')"
    ]
   },
   {
