--- a/w2v-vis.ipynb
+++ b/w2v-vis.ipynb
@@ -14,20 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "embeddings = np.load(\"w2v_rev-59000.npy\")\n",
-    "with open(\"sst.dict\", \"rb\") as fd:\n",
+    "embeddings = np.load(\"text8-2-30000.npy\")\n",
+    "with open(\"text8.dict\", \"rb\") as fd:\n",
     "    dict_data = pickle.load(fd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings shape: (19538, 100), dict size: 19538\n"
+      "Embeddings shape: (253854, 100), dict size: 253854\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -74,130 +74,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['france',\n",
-       " 'rung',\n",
-       " 'borchardt',\n",
-       " 'self-congratulatory',\n",
-       " 'ricci',\n",
-       " 'disorienting',\n",
-       " 'taunt',\n",
-       " 'styled',\n",
-       " 'prosthetic',\n",
-       " 'serials']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_similar('france')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['king',\n",
-       " 'uhhh',\n",
-       " 'bielinsky',\n",
-       " 'scherfig',\n",
-       " 'seventeen',\n",
-       " 'pounds',\n",
-       " 'nuked',\n",
-       " 'catch',\n",
-       " 'conniving',\n",
-       " 'claire']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_similar('king')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['trial',\n",
-       " 'future',\n",
-       " 'great',\n",
-       " 'dramatic',\n",
-       " 'startling',\n",
-       " 'idea',\n",
-       " 'precious',\n",
-       " 'real',\n",
-       " 'kind',\n",
-       " 'surprise']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_similar('trial')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['she',\n",
-       " 'he',\n",
-       " 'here',\n",
-       " 'schaeffer',\n",
-       " 'exhaustion',\n",
-       " 'eighties',\n",
-       " 'teenage',\n",
-       " 'survivors',\n",
-       " 'controlled',\n",
-       " 'noon']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_similar('she')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": false
@@ -206,16 +82,16 @@
     {
      "data": {
       "text/plain": [
-       "['god',\n",
-       " 'double-cross',\n",
-       " 'people',\n",
-       " 'nine',\n",
-       " 'paris',\n",
-       " 'mcklusky',\n",
-       " 'shadow',\n",
-       " 'sacre',\n",
-       " 'right-thinking',\n",
-       " 'leveling']"
+       "['france',\n",
+       " 'brazza',\n",
+       " 'prequels',\n",
+       " 'leclanch',\n",
+       " 'emmaus',\n",
+       " 'eugenicists',\n",
+       " 'aguillard',\n",
+       " 'spain',\n",
+       " 'drakar',\n",
+       " 'acylium']"
       ]
      },
      "execution_count": 9,
@@ -224,7 +100,7 @@
     }
    ],
    "source": [
-    "get_similar('god')"
+    "get_similar('france')"
    ]
   },
   {
@@ -237,16 +113,16 @@
     {
      "data": {
       "text/plain": [
-       "['love',\n",
-       " '``',\n",
-       " 'confusions',\n",
-       " 'super-powers',\n",
-       " 'grand-scale',\n",
-       " 'summary',\n",
-       " 'cumulative',\n",
-       " 'full-blown',\n",
-       " 'about',\n",
-       " 'bad']"
+       "['king',\n",
+       " 'great',\n",
+       " 'crossdressing',\n",
+       " 'momentarily',\n",
+       " 'world',\n",
+       " 'trapeze',\n",
+       " 'maximilians',\n",
+       " 'redoubled',\n",
+       " 'melkite',\n",
+       " 'yohannes']"
       ]
      },
      "execution_count": 10,
@@ -255,7 +131,7 @@
     }
    ],
    "source": [
-    "get_similar('love')"
+    "get_similar('king')"
    ]
   },
   {
@@ -268,7 +144,16 @@
     {
      "data": {
       "text/plain": [
-       "['it', 'movie', ',', 'he', 'katzenberg', 'you', 'and', 'let', 'the', 'banzai']"
+       "['trial',\n",
+       " 'upgraded',\n",
+       " 'writeups',\n",
+       " 'chandrasekhar',\n",
+       " 'tresco',\n",
+       " 'mapping',\n",
+       " 'smoushond',\n",
+       " 'gentili',\n",
+       " 'allow',\n",
+       " 'go']"
       ]
      },
      "execution_count": 11,
@@ -277,7 +162,144 @@
     }
    ],
    "source": [
+    "get_similar('trial')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['she',\n",
+       " 'he',\n",
+       " 'her',\n",
+       " 'so',\n",
+       " 'it',\n",
+       " 'stewing',\n",
+       " 'filmfestival',\n",
+       " 'but',\n",
+       " 'arbitrated',\n",
+       " 'who']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('she')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['god',\n",
+       " 'concept',\n",
+       " 'phocoenoides',\n",
+       " 'presided',\n",
+       " 'looked',\n",
+       " 'because',\n",
+       " 'skated',\n",
+       " 'combined',\n",
+       " 'arkadievich',\n",
+       " 'maisons']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('god')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['love',\n",
+       " 'approach',\n",
+       " 'gade',\n",
+       " 'start',\n",
+       " 'outweigh',\n",
+       " 'pollucite',\n",
+       " 'affine',\n",
+       " 'have',\n",
+       " 'publishing',\n",
+       " 'provision']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('love')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['it', 'which', 'this', 'but', 'they', 'he', 'that', 'an', 'however', 'always']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "get_similar('it')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the', 'a', 'and', 'in', 'of', 'to', 's', 'an', 'was', 'this']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_similar('the')"
    ]
   },
   {
