--- a/hr-indeed-2017/README
+++ b/hr-indeed-2017/README
@@ -1,5 +1,4 @@
-Run ./run.sh which will train 5 models sequentially
+Run ./run-final.sh which will train 5 models sequentially
 
-After that, to generate tags for test file, run:
+After that, to generate tags for test file, run: ./gen-tags-final.sh
 
-./use_model.py -r runs/simple.json -m runs/models.json -o tags.tsv
